linked each card to a show (to be styled)

--- a/laravel-new-exercise/resources/scss/app.scss
+++ b/laravel-new-exercise/resources/scss/app.scss
@@ -5,3 +5,11 @@ footer {
     background-color: black;
     height: 100px;
 }
+
+.card-text {
+    color: blueviolet;
+}
+
+.btn {
+    background-color: blueviolet;
+}
