added and styled show for each album, preparing for CRUD operations

--- a/laravel-new-exercise/resources/scss/app.scss
+++ b/laravel-new-exercise/resources/scss/app.scss
@@ -3,13 +3,19 @@
 header,
 footer {
     background-color: black;
-    height: 100px;
+    height: 70px;
 }
 
 .card-text {
     color: blueviolet;
 }
 
-.btn {
+.btn,
+main {
     background-color: blueviolet;
+}
+
+.another-color {
+    background-color: hotpink;
+    color: black;
 }
