--- a/laravel-new-exercise/resources/sass/app.scss
+++ b/laravel-new-exercise/resources/sass/app.scss
@@ -1,8 +1,6 @@
+// Variables
+@import 'variables';
 // Fonts
 @import url('https://fonts.bunny.net/css?family=Nunito');
-
-// Variables
-@use 'variables';
-
 // Bootstrap
-@use 'bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
